--- a/index.html
+++ b/index.html
@@ -25,6 +25,38 @@
 <body>
   
   <!-- Add your site or application content here -->
+  <h1>Monster Slayer</h1>
+
+<section class="header">
+  <article class="player">
+    <h2>YOU</h2>
+    <aside class="you">
+      <label for="pvYou">Health : <span class="pvYou">100</span>%</label>
+      <progress id="pvYou" min="0" max="100" value="100">100</progress>
+    </aside>
+  </article>
+  <article class="no-player">
+    <h2>MONSTER</h2>
+    <aside class="monster">
+      <label for="pvMonster">Health : <span class="pvMonster">100</span>%</label>
+      <progress id="pvMonster" min="0" max="100" value="100">100</progress>
+    </aside>
+  </article>
+</section>
+
+<section class="button">
+  <button class="start">START NEW GAME</button>
+</section>
+<section class="buttons">
+  <button class="attack">ATTACK</button>
+  <button class="specialAttack">SPECIAL ATTACK</button>
+  <button class="heal">HEAL</button>
+  <button class="giveUp">GIVE UP</button>
+</section>
+
+<section class="log">
+</section>
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
